# SFMLSpaceInvaders

./: .gitignore  CMakeLists.txt  README.md
src/: Game.cpp  Game.h  main.cpp
src/Extras/: Helper.cpp  Helper.h  UI.cpp  UI.h
src/GameObjects/: AlienShip.cpp  AlienShip.h  GameObject.cpp  GameObject.h  Laser.cpp  Laser.h  Player.cpp  Player.h
src/GameStates/: GameMenu.cpp  GameMenu.h  GameOver.cpp  GameOver.h  GamePlay.cpp  GamePlay.h  GameStateBase.cpp  GameStateBase.h
